--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <li>4/246 Vaguthupatti, Krishnapuram,<br>Dharmapuri, TamilNadu-635202</li>
             <li>
               <div class="c">
-                <a href="https://wa.me/8072186967" target="_blank" rel="noopener noreferrer" class="contact-link">
+                <a href="https://wa.me/+918072186967" target="_blank" rel="noopener noreferrer" class="contact-link">
                   <i class="fab fa-whatsapp"></i> 8072186967
                 </a>
               </div>
@@ -231,7 +231,7 @@
       <a href="https://github.com/Kumaresan06112001" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://wa.me/8072186967" target="_blank" rel="noopener noreferrer">
+      <a href="https://wa.me/+918072186967" target="_blank" rel="noopener noreferrer">
         <i class="fab fa-whatsapp"></i>
       </a>
     </div>
